--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
-
+		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-client</artifactId>
+			<version>4.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
